Init commit empty rbricks

--- a/app/assets/stylesheets/railsbricks_custom.css.scss
+++ b/app/assets/stylesheets/railsbricks_custom.css.scss
@@ -135,8 +135,8 @@ $navbar-border-radius: 0px;
 
 // Navbar: Default navbar
 // -> Basics
-$navbar-default-color: #777777; 
-$navbar-default-bg: #f8f8f8; 
+$navbar-default-color: #434753; 
+$navbar-default-bg: #434753; 
 $navbar-default-border: darken($navbar-default-bg, 7%); 
 // -> Links
 $navbar-default-link-color: #777777; 
